# ocr-service

./: .env.example  .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml
app/: config.py  main.py  schemas.py
app/logic/: easy_ocr.py  field_extractor.py  file_converter.py  file_manager.py  llm_ocr.py  ocr_parser.py
app/routers/: file_upload.py  ocr.py
